--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,7 +7,11 @@
     width: 95%;
     height: 80px;
     border-radius: 13px;
-    margin: 1rem auto 0;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 9999;
 }
 
 .nav-logo {
@@ -64,9 +68,9 @@
 }
 
 @media screen and (max-width:800px) {
-    /* .navbar {
+    .navbar {
         z-index: 99;
-    } */
+    }
 
     .menu-icon {
         display: block;
@@ -81,13 +85,15 @@
         width: 100%;
         height: auto;
         position: absolute;
-        top: -100%;
+        top: -1000%;
         left: 0;
         align-items: stretch;
-        padding: 96px 0 30px 0;
+        padding: 80px 0 30px 0;
         margin: 0;
         gap: 0;
         text-align: center;
+        border-radius: 13px;
+        transition: 0.3s ease-in-out;
     }
     
     .nav-menu.active {
