--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,166 +1,207 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 30px;
-    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
-    width: 95%;
-    height: 80px;
-    border-radius: 13px;
-    position: fixed;
-    top: 20px;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: 9999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  padding: 0 30px;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
+  width: 95%;
+  height: 80px;
+  border-radius: 13px;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 9999;
 }
 
 .nav-logo {
-    color: #222;
-    font-size: 2rem;
-    cursor: pointer;
+  color: #222;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
 .nav-menu {
-    gap: 2rem;
+  gap: 2rem;
 }
 
 .nav-links {
-    color: #222;
-    font-size: 1.2rem;
-    font-weight: 600;
-    padding: 0.7rem 1rem;
-    white-space: nowrap;
+  color: #222;
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding: 0.7rem 1rem;
+  white-space: nowrap;
 }
 
 .nav-links i {
-    padding-right: 10px;
+  padding-right: 10px;
 }
 
 .nav-links:hover {
-    background: #01959a;
-    color: white;
-    border-radius: 4px;
-    transition: all 0.3s ease-in-out;
+  background: #01959a;
+  color: white;
+  border-radius: 4px;
+  transition: all 0.3s ease-in-out;
 }
 
 .nav-link-mobile {
-    display: none;
+  display: none;
 }
 
 .nav-Btn {
-    padding: 0.5rem 1rem;
-    white-space: nowrap;
-    border-radius: 0.3rem;
-    font-size: 1rem;
-    font-weight: 600;
-    border: none;
-    cursor: pointer;
+  padding: 0.5rem 1rem;
+  white-space: nowrap;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
 }
 
 .nav-Btn:hover {
-    background: #000;
-    color: #ffffff;
-    transition: 0.3s ease-in-out;
+  background: #000;
+  color: #ffffff;
+  transition: 0.3s ease-in-out;
 }
 
 .menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 800px) {
+  .navbar {
+    z-index: 99;
+  }
+
+  .menu-icon {
+    display: block;
+    font-size: 1.5rem;
+    transition: 0.3s ease-in-out;
+  }
+
+  .nav-menu {
+    flex-direction: column;
+    justify-content: flex-start;
+    background: #fff;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: -1000%;
+    left: 0;
+    align-items: stretch;
+    padding: 80px 0 30px 0;
+    margin: 0;
+    gap: 0;
+    text-align: center;
+    border-radius: 13px;
+    transition: 0.3s ease-in-out;
+  }
+
+  .nav-menu.active {
+    top: 0;
+    opacity: 1;
+    z-index: -1;
+    transition: all 0.9s
+      linear(
+        0 0%,
+        0 2.27%,
+        0.02 4.53%,
+        0.04 6.8%,
+        0.06 9.07%,
+        0.1 11.33%,
+        0.14 13.6%,
+        0.25 18.15%,
+        0.39 22.7%,
+        0.56 27.25%,
+        0.77 31.8%,
+        1 36.35%,
+        0.89 40.9%,
+        0.85 43.18%,
+        0.81 45.45%,
+        0.79 47.72%,
+        0.77 50%,
+        0.75 52.27%,
+        0.75 54.55%,
+        0.75 56.82%,
+        0.77 59.1%,
+        0.79 61.38%,
+        0.81 63.65%,
+        0.85 65.93%,
+        0.89 68.2%,
+        1 72.7%,
+        0.97 74.98%,
+        0.95 77.25%,
+        0.94 79.53%,
+        0.94 81.8%,
+        0.94 84.08%,
+        0.95 86.35%,
+        0.97 88.63%,
+        1 90.9%,
+        0.99 93.18%,
+        0.98 95.45%,
+        0.99 97.73%,
+        1 100%
+      );
+  }
+
+  .nav-links {
+    display: block;
+    width: 100%;
+    font-size: 1.2rem;
+    padding: 2rem 0;
+  }
+
+  .nav-links:hover {
+    background: #01959a;
+    transition: none;
+  }
+
+  .nav-Btn {
     display: none;
+  }
+
+  .nav-link-mobile {
+    display: block;
+    text-align: center;
+    padding: 1.5rem;
+    margin: 2rem auto 0;
+    border-radius: 4px;
+    width: 80%;
+    background: #01959a;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1.2rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+  }
 }
 
-@media screen and (max-width:800px) {
-    .navbar {
-        z-index: 99;
-    }
+@media screen and (max-width: 375px) {
+  .nav-logo {
+    font-size: 1.3rem;
+  }
 
-    .menu-icon {
-        display: block;
-        font-size: 1.5rem;
-        transition: 0.3s ease-in-out;
-    }
-
-    .nav-menu {
-        flex-direction: column;
-        justify-content: flex-start;
-        background: #fff;
-        width: 100%;
-        height: auto;
-        position: absolute;
-        top: -1000%;
-        left: 0;
-        align-items: stretch;
-        padding: 80px 0 30px 0;
-        margin: 0;
-        gap: 0;
-        text-align: center;
-        border-radius: 13px;
-        transition: 0.3s ease-in-out;
-    }
-    
-    .nav-menu.active {
-        top: 0;
-        opacity: 1;
-        z-index: -1;
-        transition:all 0.9s linear(0 0%, 0 2.27%, 0.02 4.53%, 0.04 6.8%, 0.06 9.07%, 0.1 11.33%, 0.14 13.6%, 0.25 18.15%, 0.39 22.7%, 0.56 27.25%, 0.77 31.8%, 1 36.35%, 0.89 40.9%, 0.85 43.18%, 0.81 45.45%, 0.79 47.72%, 0.77 50%, 0.75 52.27%, 0.75 54.55%, 0.75 56.82%, 0.77 59.1%, 0.79 61.38%, 0.81 63.65%, 0.85 65.93%, 0.89 68.2%, 1 72.7%, 0.97 74.98%, 0.95 77.25%, 0.94 79.53%, 0.94 81.8%, 0.94 84.08%, 0.95 86.35%, 0.97 88.63%, 1 90.9%, 0.99 93.18%, 0.98 95.45%, 0.99 97.73%, 1 100%)
-    }
-
-    .nav-links {
-        display: block;
-        width: 100%;
-        font-size: 1.2rem;
-        padding: 2rem 0;
-    }
-
-    .nav-links:hover {
-        background: #01959a;
-        transition: none;
-    }
-
-    .nav-Btn {
-        display: none;
-    }
-
-    .nav-link-mobile {
-        display: block;
-        text-align: center;
-        padding: 1.5rem;
-        margin: 2rem auto 0;
-        border-radius: 4px;
-        width: 80%;
-        background: #01959a;
-        text-decoration: none;
-        color: #ffffff;
-        font-size: 1.2rem;
-        font-weight: 700;
-        letter-spacing: 2px;
-    }
+  .menu-icon {
+    font-size: 1.3rem;
+  }
 }
 
-@media screen and (max-width:375px) {
-    .nav-logo {
-        font-size: 1.3rem;
-    }
-
-    .menu-icon {
-        font-size: 1.3rem;
-    }
+@media screen and (max-width: 1024px) and (min-width: 900px) {
+  .nav-menu {
+    gap: 0.5rem;
+  }
 }
 
-@media screen and (max-width:1024px) and (min-width:900px) {
-    .nav-menu {
-        gap: 0.5rem;
-    }
-}
+@media screen and (max-width: 900px) and (min-width: 800px) {
+  .nav-menu {
+    gap: 0.5rem;
+  }
 
-@media screen and (max-width:900px) and (min-width:800px) {
-    .nav-menu {
-        gap: 0.5rem;
-    }
+  .nav-logo {
+    font-size: 1.5rem;
+  }
 
-    .nav-logo {
-        font-size: 1.5rem;
-    }
-
-    .nav-links {
-        font-size: 1rem;
-    }
+  .nav-links {
+    font-size: 1rem;
+  }
 }
